feature(users): implement me and public profile endpoints with access auth
